增加app/修改首頁

--- a/index.html
+++ b/index.html
@@ -16,22 +16,21 @@
     <div id="wrap">
         <nav>
             <ul>
-                <li><a href="index.html">首頁</a></li>
+                <li class="on"><a href="index.html">首頁</a></li>
                 <li><a href="design.html">網頁設計</a></li>
                 <li><a href="#rwd">RWD切版</a></li>
-                <li class="none"><a href="other.html">插畫/平面/其他</a></li>
+                <li><a href="other.html">UI/App</a></li>
                 <li><a href="resume.html">工作經歷</a></li>
             </ul>
         </nav>
         <a href="javascript:;" id="menu"><span></span></a>
         <div id="header">
             <div class="header_content">
-                
-                <div class="introMy"><h1><img src="images/myIcon.png" alt=""></h1><p>過往經驗 : 平面設計-文創商品設計-網頁設計-前端(目前職務 RWD撰寫html+scss)，對於新的知識勇於嘗試，挑戰自我的能力並尋求解決問題，豐富的設計實務經驗，喜歡設計，了解好的設計不只是能讓人賞心悅目，應該更付予更多的功能，搭配行銷以及符合更多的行動載具，喜歡團隊合作更勝一人球隊。</p>
+                <div class="introMy"><h1><img src="images/logo.png" alt=""></h1><p>過往經驗 : 平面設計-文創商品設計-網頁設計-前端(目前職務 RWD撰寫html+scss)，對於新的知識勇於嘗試，挑戰自我的能力並尋求解決問題，豐富的設計實務經驗，喜歡設計，了解好的設計不只是能讓人賞心悅目，應該更付予更多的功能，搭配行銷以及符合更多的行動載具，喜歡團隊合作更勝一人球隊。</p>
                 <a href="resume.html" class="btn_basic">了解更多</a></div>
             </div>
         </div>
-        <main>
+        <main class="indexWrap">
             <div class="main_content">
                 <div class="th_design">
                     <div class="md_design">
