--- a/resume.html
+++ b/resume.html
@@ -19,8 +19,8 @@
                 <li><a href="index.html">首頁</a></li>
                 <li><a href="design.html">網頁設計</a></li>
                 <li><a href="index.html#rwd">RWD切版</a></li>
-                <li class="none"><a href="other.html">插畫/平面/其他</a></li>
-                <li><a href="resume.html">工作經歷</a></li>
+                <li><a href="other.html">UI/App</a></li>
+                <li class="on"><a href="resume.html">工作經歷</a></li>
             </ul>
         </nav>
         <a href="javascript:;" id="menu"><span></span></a>
